<resources>
    <string name="app_name">solucionint</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_scientific_articles">Artículos</string>
    <string name="menu_time_meters">Tiempo</string>
    <string name="menu_calculators">Calculadoras</string>
    <string name="soluciones_inteligentes">Soluciones Inteligentes</string>
    <string name="ponte_en_forma">Ponte en Forma</string>
    <string name="recetas_de_cocina">Recetas de Cocina</string>
    <string name="de_selector">De</string>
    <string name="btn_regresar">Regresar</string>
    <string name="btn_entrar">Entrar</string>
    <string name="url_soluciones_inteligentes">https://solucionint.com/</string>
    <string name="url_ponte_en_forma">https://solucionint.com/ponte-en-forma-con-ejercicios-en-casa-y-al-aire-libre/</string>
    <string name="url_recetas_de_cocina">https://solucionint.com/recetas-de-cocina-saludables-faciles-rapidas-caseras-y-economicas/</string>
    <string name="art001">¿Qué es la Obesidad?: causas, consecuencias y su tratamiento</string>
    <string name="art002">Científicos investigan los efectos de los ejercicios de fuerza en la grasa corporal</string>
    <string name="art003">Beneficios del ejercicio físico en adultos mayores</string>
    <string name="art004">¿Qué es la meditación?: origen y sus beneficios según la ciencia</string>
    <string name="art005">Beneficios del ejercicio físico para la salud</string>
    <string name="art006">Importancia del ejercicio físico para dormir mejor, conciliar el sueño, insomnio y somnolencia diurna en adultos mayores</string>
    <string name="art007">Trastornos mentales: beneficios del ejercicio físico como tratamiento auxiliar</string>
    <string name="art008">Metabolismo: la importancia del ejercicio físico y la dieta de restricción de calorías para bajar de peso</string>
    <string name="art009">Suero oral que no lo es y bebidas que no son lo que dicen ser</string>
    <string name="art010">Beneficios del omega 3 y el ejercicio físico de alta intensidad (HIIT) para bajar de peso</string>
    <string name="art011">Sopas cremas que no son lo que crees o lo que han querido que creas</string>
    <string name="art012">Caldo de albóndigas con verduras</string>
    <string name="art013">Pozole blanco</string>
    <string name="art014">Pescado a la veracruzana</string>
    <string name="art015">Crema de elote</string>
    <string name="art016">Chile o Pimiento: efectos, propiedades, beneficios del Capsicum y Capsaicinoides</string>
    <string name="art017">¿Qué es el Trastorno Afectivo Estacional?</string>
    <string name="art018">Suplementación con Glutamina: estudio científico realizado en jugadores de baloncesto</string>
    <string name="art019">Microbiota Intestinal: ¿Somos lo que comemos?</string>
    <string name="art020">Tacos de carne con papa y verduras</string>
    <string name="art021">Triglicéridos y su metabolismo</string>
    <string name="art022">Eje microbiota-intestino-cerebro: ¿Qué relación tienen los probióticos con nuestra salud mental?</string>
    <string name="art023">Aguacate: beneficios, valor nutricional y propiedades</string>
    <string name="art024">Beneficios de la suplementación con omega 3 en la microbiota intestinal, la salud física y mental</string>
    <string name="art025">Higos cristalizados</string>
    <string name="art026">Galletas: ten cuidado con ellas</string>
    <string name="art027">¿Cómo prevenir la depresión mediante actividad física y ejercicio?: lo que dice la ciencia al respecto</string>
    <string name="art028">Ejercicio Físico: un remedio natural para la depresión gracias a la plasticidad cerebral</string>
    <string name="art029">Piña en Almíbar</string>
    <string name="art030">Guiso de Lentejas Especiado con Arroz</string>
    <string name="art031">El Té: una alternativa natural para tratar la indigestión y la acidez estomacal</string>
    <string name="art032">Higo: su riqueza nutricional y sus beneficios para la salud y el bienestar</string>
    <string name="art033">El colesterol: aliado y enemigo de tu cuerpo</string>
    <string name="art034">¿Conoces los beneficios del aguacate Hass? Te sorprenderás</string>
    <string name="art035">Galletas Marías</string>
    <string name="art036">Calabacitas rancheras con puntas de filete</string>
    <string name="art037">Pollo a la parrilla</string>
    <string name="art038">¿Qué es la aterosclerosis? Conoce los principales factores de riesgo y cómo prevenirla</string>
    <string name="art039">Los beneficios de la avena: una mirada científica a sus propiedades saludables</string>
    <string name="art040">Cómo el ejercicio físico transforma tu cuerpo: el músculo esquelético y su relación con la quinurenina</string>
    <string name="art041">Lavado de manos con jabón: la mejor defensa contra las infecciones respiratorias</string>
    <string name="art042">Hipertensión arterial: la epidemia silenciosa</string>
    <string name="art043">Alcohol, los peligros de comenzar a beber demasiado pronto: la relación entre la edad y los riesgos asociados a su consumo</string>
    <string name="art044">Piña (Ananas Comosus): Potencia tu salud con su valor nutricional y beneficios</string>
    <string name="art045">La conexión oculta ¿Qué relación tiene la enfermedad inflamatoria intestinal con la ansiedad, la depresión y el trastorno bipolar?</string>
    <string name="art046">Rosca de Reyes</string>
    <string name="art047">Chop Suey Marinero</string>
    <string name="art048">Harina Integral para Hot Cakes</string>
    <string name="art049">El poder de la piña: una solución deliciosa para protegerte del colesterol y adelgazar</string>
    <string name="art050">Beneficios de la hidratación: ¡Salud en Acción! Un hábito que a tu vida le dará una transformación</string>
    <string name="art051">Uvas: Salud y Nutrición, ¡Jugosas, dulces, maravillosas, deliciosas y de gran virtud!</string>
    <string name="art052">Deterioro Cognitivo: para el cuidado de tu cerebro y salud mental ¡Un estilo de vida saludable es lo más racional!</string>
    <string name="art053">Hiperhidratación: ¿Qué pasa si bebes mucha agua antes de hacer ejercicio? Consejos científicos para una óptima hidratación</string>
    <string name="art054">Nutritivos Rábanos Rojos (Raphanus Sativus): Explorando sus beneficios para la salud</string>
    <string name="art055">Fortalece tus defensas con uvas: ¡Escudo inmunológico que construyes, revitalizas y motivas!</string>
    <string name="art056">Redes Neuronales: responsables del apego interpersonal y las adicciones</string>
    <string name="art057">Pescado en Salsa de Cascabel</string>
    <string name="art058">Concentrado para Refresco de Jengibre</string>
    <string name="art059">Estofado Cremoso de Pollo</string>
    <string name="art060">¿Qué es la fatiga? Descifrando como afecta nuestro cuerpo y el enigma detrás de sus 2 manifestaciones esenciales</string>
    <string name="art061">BIOMARCADORES SANGUÍNEOS: ESENCIALES PARA OPTIMIZAR EL RENDIMIENTO EN EL DEPORTE</string>
    <string name="art062">PROTEÍNAS PLASMATICAS: ¿TE INTERESA BAJAR DE PESO Y MEJORAR TU SALUD? CIENTIFICOS BUSCAN PATRONES QUE PODRÍAN AYUDARTE</string>
    <string name="art063">MÚSCULO ESQUELÉTICO, MÁS ALLÁ DE LA FUERZA: METABOLISMO DEL EJERCICIO FÍSICO</string>
    <string name="art064">HOMEOSTASIS: ¿QUÉ PASA CON LA GRASA CORPORAL DURANTE EL EJERCICIO FÍSICO?</string>
    <string name="art065">8 MOTIVOS INDISCUTIBLES PARA INICIAR UNA RUTINA DE EJERCICIO FÍSICO</string>
    <string name="art066">CACAHUATE (ARACHIS HIPOGAEA): UNA JOYA NUTRICIONAL QUE IMPACTA POSITIVAMENTE EN TU SALUD</string>
    <string name="art067">IMC: DESMITIFICANDO EL ÍNDICE DE MASA CORPORAL ¿ES REALMENTE UN INDICADOR PRECISO DE SALUD? Y ¿POR QUÉ ES TAN USADO?</string>
    <string name="art068">SÍNDROME METABÓLICO: ¿QUÉ TAN MALO ES TENER SOBREPESO U OBESIDAD?</string>
    <string name="art069">PERA (PYRUS COMMUNIS): ¿QUIERES PREVENIR ENFERMEDADES? descubre cómo su consumo puede ayudarte a mantenerte sano</string>
    <string name="art070">EL RENACIMIENTO DE TU CUERPO: DESCUBRE CÓMO EL BEBER AGUA PUEDE TRANSFORMAR TU BIENESTAR</string>
    <string name="art071">¡DULCE Y NUTRITIVA! LOS SECRETOS DE LA SANDÍA (CITRULLUS LANATUS) PARA UNA VIDA SALUDABLE</string>
    <string name="art072">PISTACHES (PISTACIA VERA): EL SNACK PERFECTO PARA POTENCIAR TU ENTRENAMIENTO Y TU DIETA FITNESS</string>
    <string name="art073">RECETA: SOPA TARASCA</string>
    <string name="art074">RECETA: MAYONESA</string>
    <string name="art075">RECETA: ADEREZO ESTILO MAYONESA</string>
    <string name="art076">¿QUÉ ES EL TÉJIDO ADIPOSO ABDOMINAL? TODO LO QUE NECESITAS SABER SOBRE SUS RIESGOS</string>
    <string name="art077">¿CÓMO EVITAR EL EFECTO REBOTE? MANTENER LA PÉRDIDA DE PESO</string>
    <string name="art078">¿POR QUÉ SIENTES FATIGA AL HACER EJERCICIO? LA CIENCIA DETRÁS DEL CANSANCIO</string>
    <string name="art079">¿POR QUÉ SUDAMOS? SUDOR, MECANISMO CRUCIAL PARA PRESERVAR TU BIENESTAR</string>
    <string name="art080">ENTRENAMIENTO HIIT: LA CLAVE PARA MEJORAR TU SALUD CARDIOVASCULAR RÁPIDAMENTE</string>
    <string name="art081">RECETA: TACOS AHOGADOS</string>
    <string name="art082">RECETA: BARRAS DE AMARANTO CON CHOCOLATE</string>
    <string name="art083">RECETA: TINGA DE POLLO CON VERDURAS</string>
    <string name="art084">RECETA: PAN INTEGRAL CON SEMILLAS</string>
    <string name="art085">HIGO: UN TESORO NUTRICIONAL CON PROPIEDADES QUÍMICAS IMPRESIONANTES</string>
    <string name="art086">CHAYOTE: LA JOYA NUTRICIONAL ANCESTRAL MEXICANA QUE REVOLUCIONA LA SALUD MODERNA</string>
    <string name="art087">CÓMO DESFLEMAR CEBOLLA</string>
    <string name="art088">RECETA: SÁNDWICH DE ATÚN</string>
    <string name="art089">RECETA: PESCADILLAS DE ATÚN</string>
    <string name="art090">RECETA: TACOS DE ATÚN</string>
    <string name="art091">TODO SOBRE LA CREATINA: ¿QUÉ ES? ¿CÓMO FUNCIONA? ¿PARA QUÉ SIRVE? ¿ES SEGURA?</string>
    <string name="art092">CALAMBRES MUSCULARES: ¿POR QUÉ OCURREN? ¿SOLO MOLESTOS O SÍNTOMAS DE ALGO MÁS GRAVE?</string>
    <string name="art093">¿CÓMO FUNCIONA LA RESPIRACIÓN DURANTE EL EJERCICIO FÍSICO? DESCUBRE LOS ÚLTIMOS HALLAZGOS CIENTÍFICOS</string>
    <string name="art094">LA CIENCIA DEL CALENTAMIENTO: CÓMO OPTIMIZAR EL RENDIMIENTO DEPORTIVO CON TÉCNICAS EFECTIVAS</string>
    <string name="art095">RECETA: PAN DE MAÍZ</string>
    <string name="art096">RECETA: AGUACATES RELLENOS</string>
    <string name="art097">RECETA: TORTITAS DE ATÚN</string>
    <string name="art098">RECETA: EMPANADAS DE ATÚN</string>
    <string name="art099">RECETA: CROQUETAS DE ATÚN CON PICO DE GALLO</string>
    <string name="art100">CONSUMO DE AZÚCAR: ¿UNA DULCE TENTACIÓN CON AMARGAS CONSECUENCIAS?</string>
    <string name="art001_url">https://solucionint.com/obesidad-causas-consecuencias-tratamiento-si/</string>
    <string name="art002_url">https://solucionint.com/cientificos-ejercicios-de-fuerza-grasa-corporal-si/</string>
    <string name="art003_url">https://solucionint.com/beneficios-ejercicio-fisico-adultos-mayores-si/</string>
    <string name="art004_url">https://solucionint.com/meditacion-origen-beneficios-ciencia-si/</string>
    <string name="art005_url">https://solucionint.com/beneficios-del-ejercicio-fisico-salud-si/</string>
    <string name="art006_url">https://solucionint.com/ejercicio-dormir-sueno-insomnio-adultos-mayores-si/</string>
    <string name="art007_url">https://solucionint.com/beneficios-ejercicio-fisico-trastornos-mentales-si/</string>
    <string name="hint_dialogue_selector">Número</string>
    <string name="dial_lap">Circuito</string>
    <string name="dial_elapsed_time">Tiempo Transcurrido</string>
    <string name="dial_total_time">Tiempo Total</string>
    <string name="aceptar">Aceptar</string>
    <string name="altura">Altura</string>
</resources>